--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "react-component",
+  "name": "glass-3d",
   "version": "1.0.0",
   "description": "",
-  "main": "./dist/react-component.umd.js",
-  "module": "./dist/react-component.es.js",
+  "main": "./dist/glass-3d.umd.js",
+  "module": "./dist/glas-3d.es.js",
   "exports": {
     ".": {
-      "import": "./dist/react-component.es.js",
-      "require": "./dist/react-component.umd.js"
+      "import": "./dist/glass-3d.es.js",
+      "require": "./dist/glass-3d.umd.js"
     }
   },
   "scripts": {
@@ -45,5 +45,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "react-parallax-tilt": "^1.7.148",
+    "sass": "^1.63.4"
+  }
 }
